added the onclick event listener

--- a/javascript.html
+++ b/javascript.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 	<h1>Javascript Lesson</h1>
+	<form>
+		<input type="button" value="click here" onmouseover="pearlClass();">
+	</form>
 	<script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
