--- a/javascript.html
+++ b/javascript.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 	<h1>Javascript Lesson</h1>
-	<form>
-		<input type="button" value="click here" onmouseover="pearlClass();">
-	</form>
+	<!-- EVENT LISTENER IN HTML -->
+	<!-- <form>
+		<input type="button" value="click here" onmouseover="document.write('hello pearl class')">
+	</form> -->
+
+	<!-- EVENT LISTENER WITH JAVASCRIPT -->
 	<script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
