comment the first function

--- a/javascript.html
+++ b/javascript.html
@@ -12,6 +12,9 @@
 	</form> -->
 
 	<!-- EVENT LISTENER WITH JAVASCRIPT -->
+	<form>
+		<input type="button" value="click here" onclick="pearlClass();">
+	</form>
 	<script type="text/javascript" src="javascript.js"></script>
 </body>
 </html>
